更新至版本1.9.20，主要更新內容: 1.加入當發生Table:AVEHICLE 與 Table:ACMD_OHTC狀態不匹配時，會再次檢查兩邊的狀態，以防發生在趕車時，無法順利趕走的問題。(因為有命令殘留)。 2.在ID:136中加入PositionChcekTimes，用來記錄該次OHT再進行Load/Unload時，進行了幾次的修正才順利定位成功。

--- a/BCWinForm/Config/Taichung6F/EQMapToValueEvent.config
+++ b/BCWinForm/Config/Taichung6F/EQMapToValueEvent.config
@@ -32,7 +32,7 @@
     <ValueEvent baseName="PLC_CONTROL_INDEX_W" relativeName="PLC_CONTROL"></ValueEvent>
   </EQObject>
 
-  <EQObject id="MTL" cate="Equipment" MPLCName="MTL" isValueEventTrigger="Y">
+  <!--<EQObject id="MTL" cate="Equipment" MPLCName="MTL" isValueEventTrigger="Y">
     <ValueEvent baseName="MTL_TO_OHXC_INDEX_AREA" relativeName="MTL_TO_OHXC_INDEX_AREA"></ValueEvent>
     <ValueEvent baseName="MTL_TO_OHXC_HANDSHAKE_AREA" relativeName="MTL_TO_OHXC_HANDSHAKE_AREA"></ValueEvent>
     <ValueEvent baseName="MTL_TO_OHXC_CURRENT_CAR_ID" relativeName="MTL_TO_OHXC_CURRENT_CAR_ID"></ValueEvent>
@@ -51,5 +51,5 @@
     <ValueEvent baseName="OHXC_TO_MTL_CAR_OUT_NOTIFY" relativeName="OHXC_TO_MTL_CAR_OUT_NOTIFY"></ValueEvent>
     <ValueEvent baseName="OHXC_TO_MTL_REPLY_CAR_IN_DATA_CHECK" relativeName="OHXC_TO_MTL_REPLY_CAR_IN_DATA_CHECK"></ValueEvent>
     <ValueEvent baseName="OHXC_TO_MTL_CST_INTERFACE" relativeName="OHXC_TO_MTL_CST_INTERFACE"></ValueEvent>
-  </EQObject>
+  </EQObject>-->
 </EQMapToValueEvent>
