--- a/BCWinForm/Config/Taichung6F/EquipmentDefs_simple.config
+++ b/BCWinForm/Config/Taichung6F/EquipmentDefs_simple.config
@@ -20,7 +20,7 @@
         <Vehicle id="OHx06" communicationType="3" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EQTcpIpMapAction_Taichung6F, ScriptControl" tcpipAgentName="OHxC_TO_OHx06"/>
         <Vehicle id="OHx07" communicationType="3" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EQTcpIpMapAction_Taichung6F, ScriptControl" tcpipAgentName="OHxC_TO_OHx07"/>
         <Vehicle id="OHx08" communicationType="3" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EQTcpIpMapAction_Taichung6F, ScriptControl" tcpipAgentName="OHxC_TO_OHx08"/>
-        <EQPT id="MTL" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.MTLValueDefMapAction, ScriptControl"/>
+        <!--<EQPT id="MTL" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.MTLValueDefMapAction, ScriptControl"/>-->
       </Node>
       <Node id="EQ_NODE" node_num="2" >
         <EQPT id="EQ1" communicationType="1" >
