加入可以by有設定cst id的port，進行cycle run 測試。(for台中 壓力測試使用)

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/BCWinForm/Config/CSOT_T4/._CSTTranSchedule.xlsx
+/BCWinForm/Config/OHS100/._CSTTranSchedule.xlsx
+/BCWinForm/Config/Taichung/._CSTTranSchedule.xlsx
+/BCWinForm/Config/Taichung/._~$CSTTranSchedule.xlsx
